# vite-plugin-a11y

./: .bazelrc  BUILD.bazel  MODULE.bazel  flake.nix  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: ci.yml  publish.yml
src/: colorContrast.ts  index.ts  plugin.ts  types.ts  validators.ts
tests/: colorContrast.test.ts  validators.test.ts
